# climbers-journal

./: .env.example  .gitignore  CHANGELOG.md  README.md  TODOS.md  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.devcontainer/: devcontainer.json
app/backend/: config.yaml.example  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial_schema.py  5f7f246f9479_initial_empty_migration.py  859251e032bc_add_climbing_tables_crag_area_route_.py  a25ec3f6c41d_add_endurance_activity_table.py  b3f1a2c4d5e6_add_ix_ascent_date_index.py  c7d2e8f1a3b4_add_climbing_session_table.py  d8e3f9a2b4c5_backfill_climbing_sessions.py
app/backend/climbers_journal/: config.py  db.py  main.py
app/backend/climbers_journal/models/: __init__.py  activity.py  climbing.py  endurance.py
app/backend/climbers_journal/routers/: chat.py  climbing.py  import_csv.py  stats.py  sync.py
app/backend/climbers_journal/services/: activity.py  climbing.py  import_csv.py  intervals.py  llm.py  sync.py
app/backend/climbers_journal/tools/: intervals.py  journal.py  record.py  registry.py
app/backend/tests/: conftest.py  test_activity.py  test_climbing.py  test_config.py  test_db.py  test_import_csv.py  test_journal_tools.py  test_record_tool.py  test_stats.py  test_sync.py
backend/: Dockerfile  pyproject.toml
docs/: PRD.md
features/: INDEX.md
frontend/: pnpm-lock.yaml
loki/: loki-config.yml
nginx/: nginx.conf
plans/: 0000-climbers-journal-mvp.md  0001-climbers-journal-core.md  0002-polish-onboarding.md  (+3 more)
(+62 files in other folders)
